# knn_classification

./: main.py  pyproject.toml
.github/workflows/: CI.yml  ci.yml  main.yml
config/: config.yaml
output/: results.csv
src/: config.py  config_loader.py  data_loader.py  evaluate.py  look.ipynb  preprocessing.py  train.py
tests/: test.py
